--- a/index.html
+++ b/index.html
@@ -76,37 +76,57 @@
                 </div>
             </div>
         </section>
-    </main>
-
-    <footer class="footer">
-        <section class="footer__container contain">
-            <nav class="nav nav--footer">
-                <h2 class="footer__title">Curso CSS.</h2>
-
-                <ul class="nav__link nav__link--footer">
-                    <li class="nav__item">
-                        <a href="#" class="nav__links">Inicio</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#" class="nav__links">Acerca de</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#" class="nav__links">Contacto</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#" class="nav__links">Blog</a>
-                    </li>
-                </ul>
-            </nav>
-
-            <form class="footer__form" action="https://formspree.io/f/mknkkrkj" method="POST">
-                <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
-                <div class="footer__inputs">
-                    <input type="email" placeholder="Email:" class="footer__input" name="_replyto">
-                    <input type="submit" value="Registrate" class="footer__submit">
+        <section class="concursos-cards">
+            <h1 class="heading">Ponentes</h1>
+            <div class="splide ponentes" role="group" aria-label="Splide Basic HTML Example">
+                <div class="splide__track">
+                    <ul class="splide__list">
+                        <li class="splide__slide slide-1">
+                            <div class="ponente">
+                                <h1>Ponente 1</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, expedita aspernatur vero nulla suscipit repudiandae, optio impedit deserunt praesentium alias, quas inventore nesciunt magni cupiditate numquam sequi nostrum consequatur reprehenderit!</p>
+                            </div>
+                        </li>
+                        <li class="splide__slide slide-2">
+                            <div class="ponente">
+                                <h1>Ponente 1</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, expedita aspernatur vero nulla suscipit repudiandae, optio impedit deserunt praesentium alias, quas inventore nesciunt magni cupiditate numquam sequi nostrum consequatur reprehenderit!</p>
+                            </div>
+                        </li>
+                        <li class="splide__slide slide-3">
+                            <div class="ponente">
+                                <h1>Ponente 1</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, expedita aspernatur vero nulla suscipit repudiandae, optio impedit deserunt praesentium alias, quas inventore nesciunt magni cupiditate numquam sequi nostrum consequatur reprehenderit!</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-            </form>
+            </div>
         </section>
+    </main>
+    <footer class="footer">
+        <nav class="nav nav--footer">
+            <ul class="nav__link nav__link--footer">
+                <li class="nav__item">
+                    <a href="#">Inicio</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#">Evento</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#">Ponentes</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#">Registro</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="footer__social">
+            <a href="#" class="footer__icons"><img src="/build/assets/redes/facebook.png" class="footer__img"></a>
+            <a href="#" class="footer__icons"><img src="/build/assets/redes/instagram.png" class="footer__img"></a>
+            <a href="#" class="footer__icons"><img src="/build/assets/redes/twitter.png" class="footer__img"></a>
+            <a href="#" class="footer__icons"><img src="/build/assets/redes/youtube.png" class="footer__img"></a>
+        </div>
     </footer>
 </body>
 </html>
